--- a/Project1/css/style.css
+++ b/Project1/css/style.css
@@ -42,9 +42,9 @@ body
 }
 .leaflet-bar button, .leaflet-control-zoom-in, .leaflet-control-zoom-out
 {
-	height: 50px !important;
-	width: 50px !important;
-	font-size: 2.6em;
+	height: 40px !important;
+	width: 40px !important;
+	font-size: 1.5em;
 	padding: 8px;
 }
 .modal-body
@@ -60,4 +60,10 @@ body
 #txtWikiImg
 {
 	text-align: center;
+}
+.holiday, .airports
+{
+	padding: 5px 0;
+	font-weight: bold;
+	border-bottom: 1px solid #999;
 }
